Fix width of signup modal on mobile

--- a/app/assets/stylesheets/components/_modals.scss
+++ b/app/assets/stylesheets/components/_modals.scss
@@ -62,6 +62,10 @@
     position: absolute;
     right: 20px;
     bottom: 60px;
-    width: 25vw;
+    width: 85vw;
+
+    @media (min-width: $screen-sm) {
+      width: 25vw;
+    }
   }
 }
